# orchestra

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
agents/job_finder/: agent.py  config.py
agents/job_finder/cv_tailor/: docx_writer.py  tailor.py
agents/job_finder/search/: job_search.py  seen_jobs.py
agents/referral_finder/: agent.py  config.py  generator.py  notifier.py
agents/referral_finder/email_finder/: __init__.py  domain_lookup.py  github.py  pattern_cache.py  pipeline.py  smtp_verify.py
agents/referral_finder/search/: linkedin_search.py  seen_contacts.py
shared/: base_agent.py  claude_client.py  config.py  models.py  notifications.py  orchestrator.py
