[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra"
version = "0.1.0"
description = "Multi-agent orchestrator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "tavily-python>=0.5.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "dnspython>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-docx>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "agents*"]
